examples/error-codes/violates-constraint/nonfatal/CV-CER5-bad.c
int main(void) {
      struct s { int m : 5; } t;
      &t.m;
}
